Add ticket creation page

--- a/BrowserCalls.Web/Views/Home/Index.cshtml
+++ b/BrowserCalls.Web/Views/Home/Index.cshtml
@@ -1,31 +1,82 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿@model BrowserCalls.Web.Models.Ticket
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<!-- Main jumbotron -->
+<div class="jumbotron bicycle-polo-background">
+    <div class="container bicycle-polo-text">
+        <h1 class="text-center"><strong>Birchwood Bicycle Polo Co.</strong></h1>
+        <p>
+            We sell only the finest bicycle polo supplies for those seeking fame and glory in this <a href="https://www.youtube.com/watch?v=DaK9Zj3QHDY" target="_blank">sport of kings</a>.
+        </p>
+
+        <h3><strong>Having trouble with one of our products?</strong></h3>
+        <p>
+            Talk to one of our support agents now — or fill out the support form below and someone will call you later.
+        </p>
+        <p><a class="btn btn-primary btn-lg btn-block" href="#support" role="button">Get help</a></p>
+    </div>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+<div class="container">
+    @*Render partial*@
+
+    <h2 id="support">Contact support</h2>
+
+    <p class="lead">
+        Talk with one of our support agents right now by clicking the "Call Support" button on the right. If you can't talk now, fill out a support ticket and an agent will call you later.
+    </p>
+
+    <div class="row">
+
+        <div class="col-md-6 col-md-push-6">
+
+            <div class="panel panel-info client-controls">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Talk to support now</h3>
+                </div>
+                <div class="panel-body">
+                    <p id="support-unavailable">
+                        None of our support agents are online. (To log in as a support agent, <a href="#" target="_blank">click here</a>)
+                    </p>
+                    <p><strong>Status</strong></p>
+                    <div class="well well-sm" id="call-status">
+                        Connecting to Twilio...
+                    </div>
+
+                    <button class="btn btn-lg btn-primary call-support-button" onclick="callSupport()">
+                        <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> Call support
+                    </button>
+                    <button class="btn btn-lg btn-danger hangup-button" disabled onclick="hangUp()">Hang up</button>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-6 col-md-pull-6">
+            @using(Html.BeginForm("Create", "Tickets"))
+            {
+            <div class="form-group">
+                @Html.LabelFor(x => x.Name)
+                @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.Name)
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(x => x.PhoneNumber)
+                @Html.TextBoxFor(x => x.PhoneNumber, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.PhoneNumber)
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(x => x.Description)
+                @Html.TextBoxFor(x => x.Description, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.Description)
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary btn-lg btn-block">Submit ticket</button>
+            </div>
+            }
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+
+    <small class="pull-right">
+        Header photo courtesy <a href="https://www.flickr.com/photos/tink20seven/4654348885/">David Sachs via Flickr</a>
+    </small>
 </div>
