Add reference to browser-calls.js

--- a/BrowserCalls.Web/Views/Shared/_Layout.cshtml
+++ b/BrowserCalls.Web/Views/Shared/_Layout.cshtml
@@ -34,5 +34,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     <script src="//static.twilio.com/libs/twiliojs/1.2/twilio.min.js"></script>
+    @Scripts.Render("~/bundles/browser-calls")
 </body>
 </html>
