--- a/BrowserCalls.Web/Views/Shared/_Layout.cshtml
+++ b/BrowserCalls.Web/Views/Shared/_Layout.cshtml
@@ -15,12 +15,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Birchwood Bicycle Polo Co.</a>
+                <a class="navbar-brand" href="@Url.Action("Index", "Home")">Birchwood Bicycle Polo Co.</a>
             </div>
 
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="">Support dashboard</a></li>
+                    <li><a href="@Url.Action("Index", "Dashboard")">Support dashboard</a></li>
                 </ul>
             </div>
         </div>
