Add confirmation message for ticket creation

--- a/BrowserCalls.Web/Views/Home/Index.cshtml
+++ b/BrowserCalls.Web/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
 </div>
 
 <div class="container">
-    @*Render partial*@
+    @{Html.RenderPartial("_Messages");}
 
     <h2 id="support">Contact support</h2>
 
