--- a/BrowserCalls.Web/Views/Shared/_Messages.cshtml
+++ b/BrowserCalls.Web/Views/Shared/_Messages.cshtml
@@ -1,7 +1,7 @@
-﻿@if (TempData["success"] != null)
+﻿@if (ViewBag.Success != null)
 {
     <div class="alert alert-success alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        @TempData["success"]
+        @ViewBag.Success
     </div>
 }
