Fixed couple bugs

--- a/BrowserCalls.Web/Views/Tickets/Index.cshtml
+++ b/BrowserCalls.Web/Views/Tickets/Index.cshtml
@@ -35,7 +35,7 @@
                 </div>
                 <div class="panel-body">
                     <p id="support-unavailable">
-                        None of our support agents are online. (To log in as a support agent, <a href="#" target="_blank">click here</a>)
+                        None of our support agents are online. (To log in as a support agent, <a href="/Dashboard" target="_blank">click here</a>)
                     </p>
                     <p><strong>Status</strong></p>
                     <div class="well well-sm" id="call-status">
