--- a/tutorial/index.jade
+++ b/tutorial/index.jade
@@ -158,7 +158,7 @@
       * [Twilio.Device.connect()](//www.twilio.com/docs/client/device#connect)
 
   .step(data-file='BrowserCalls.Web/Controllers/CallController.cs',
-  data-highlight='19-29, 35-37')
+  data-highlight='18-28,33-36')
     :markdown
       ## Connect the call to a phone number
 
@@ -222,7 +222,7 @@
         * [Twilio.Device.connect()](//www.twilio.com/docs/client/device#connect)
 
   .step(data-file='BrowserCalls.Web/Controllers/CallController.cs',
-  data-highlight='19-37')
+  data-highlight='18-24,29-36')
       :markdown
         ## Connect the call to the support agent's client
 
@@ -325,5 +325,5 @@
         over a voice call or SMS text messages.
 
         Thanks for checking out this tutorial! If you have any feedback to share
-        with us, we'd love to hear it. Tweet [@twilio](//twitter.com/twilio)
-        to let us know what you think.
+        with us, we'd love to hear it.
+        [Contact the Twilio Developer Education Team](mailto:deved-oss@twilio.com) to let us know what you think.
